[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Circle_Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Circle_Sprite_Player.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player_Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 44 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 4 )

[node name="Circle_Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CircleSprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, 6 )
shape = SubResource( 1 )

[node name="Player_Trail" parent="." instance=ExtResource( 3 )]
show_behind_parent = true
width = 30.0
width_curve = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -346.0
margin_right = -422.0
margin_bottom = -215.0

[node name="PauseLabel" type="Label" parent="CanvasLayer/PauseMenu"]
margin_right = 178.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
text = "Paused!"

[node name="ContinueButton" type="Button" parent="CanvasLayer/PauseMenu"]
margin_top = 61.0
margin_right = 178.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 4 )
text = "Continue Game!"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu"]
margin_top = 98.0
margin_right = 178.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 4 )
text = "Quit Game!"

[connection signal="pressed" from="CanvasLayer/PauseMenu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
